# rust-e2ee

./: Cargo.toml  Makefile  README.md  rust-toolchain.toml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/crypto/: Cargo.toml
crates/crypto/src/: decrypt.rs  encrypt.rs  key.rs  lib.rs
crates/sdk/: Cargo.toml  build-android.sh  build-ios.sh  build.rs
crates/sdk/src/: ee2e_sdk.udl  lib.rs
crates/sdk/tests/: test_generated_bindings.rs
crates/sdk/tests/bindings/: test_sdk.swift
crates/uniffi-bindgen/: Cargo.toml
src/: crypto.rs
src/crypto/: decrypt.rs  encrypt.rs  error.rs  key.rs
