[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
rust-version = "1.80"
edition = "2021"

[workspace.dependencies]
# local crates
crypto = { path = "./crates/crypto", version = "0.0.0" }

# non-local crates
base64 = "0.22.1"
ring = "0.17.8"
rsa = "0.9.6"
sha2 = "0.10"
rand = { version = "0.8", features = ["std_rng"] }
clap = { version = "4.5.17", features = ["derive"] }
uniffi = { version = "0.28.1" }
# [workspace.build-dependencies]
# uniffi = { version = "0.28.1", features = [ "build" ] }
#
# [workspace.dev-dependencies]
# uniffi = { version = "0.28.1", features = ["bindgen-tests"] }
