[package]
name = "sdk"
version = "0.1.0"
rust-version.workspace = true
edition.workspace = true

[lib]
crate-type = ["cdylib", "staticlib", "lib"]
name = "e2ee_sdk"

[dependencies]
crypto = { workspace = true }
rsa = { workspace = true }
base64 = { workspace = true }
uniffi = { workspace = true }

[build-dependencies]
uniffi = { workspace = true, features = [ "build" ] }

[dev-dependencies]
uniffi = { workspace = true, features = ["bindgen-tests"] }
